remove multiple inheritance

--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter03.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter03.tex
@@ -7,6 +7,8 @@ def FunctionName([parameters]) {
 }
 \end{lstlisting}
 The function will return the last value of the function body without the return statement. Generally, it is better to write the return statement to make the code more readable. If you don't want to return any value, just write "return null".
+
+In Cygni, you can wrap C\# methods as Cygni functions, which are called the native functions. The usage of native functions is the same as Cygni functions.
 \section{Basic Types}
 \subsection{Number}
 	Number can be integer or float.
