--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter04.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter04.tex
@@ -1,4 +1,5 @@
-\chapter{Operators}
+\chapter{Struct Arrays}
+
 \section{Arithmetic Operators}
  Cygni supports the following arithmetic operators:
  \begin{itemize}
