--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter05.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter05.tex
@@ -1,4 +1,12 @@
-\chapter{Control Flow Statements}
+\chapter{Classes}
+The data and functions within a class are known as the class's members.
+\section{Data Members}
+Data members are those members that contain data for the class.
+\begin{lstlisting}
+\end{lstlisting}
+\section{Function Members}
+Functions members are functions defined within the class.
+
 \section{Condition Statement}
 Use if to start a condition statement. There are three keywords: if, else, elif.
 \begin{lstlisting}
