--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter06.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter06.tex
@@ -1,3 +1,7 @@
 \chapter{Built-in Commands}
-\section{Do File}
-TO DO
+\section{dofile}
+
+\section{import}
+\section{loaddll}
+\section{scope}
+\section{delete}
