--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter05.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter05.tex
@@ -1,91 +1,88 @@
 \chapter{Classes}
 The data and functions within a class are known as the class's members.
+The following example displays
 \section{Data Members}
 Data members are those members that contain data for the class.
 \begin{lstlisting}
 \end{lstlisting}
+
 \section{Function Members}
-Functions members are functions defined within the class.
+Functions members are functions defined within the class. The 'function members' includes not only functions, but also constructors, operators, indexers, etc. An example is as followings:
+% \begin{lstlisting}
+% class student {
+% 	def __INIT__(ID, name, age) {
+% 		this.ID = ID
+% 		this.name = name
+% 		this.age = age
+% 	}
+% 
+% 	def sayMyName() {
+% 		printf('My name is {0}.', this.name)
+% 	}
+% 
+% 	def showMyID() {
+% 		printf('My ID is {0}.', this.ID)
+% 	}
+% 
+% 	def __TOSTRING__() {
+% 		return '(ID: {0}, name: {1}, age: {2})'.format(this.ID, this.name, this.age)
+% 	}
+% }
+% \end{lstlisting}
 
-\section{Condition Statement}
-Use if to start a condition statement. There are three keywords: if, else, elif.
 \begin{lstlisting}
-if x > 10 {
-	print('x is greater than 10')
-} else {
-	print('x is not greater than 10')
+class position{
+	def __INIT__(nx, ny){
+		this.x = nx
+		this.y = ny
+	}
+	
+	def move(nx, ny){
+		this.x = nx
+		this.y = ny
+	}
+	
+	def __TOSTRING__(){
+		printf("({0}, {1})", this.x, this.y)
+	}
+	
 }
+p1 = position(10,20)
+print(p1)
+p1.move(35, 47)
+print(p1)
+\end{lstlisting}	
 
-if y == 5 {
-	print(5)
-}
-elif y == 10 {
-	print(10)
-}
-elif y == 20 {
-	print(20)
-}
-else {
-	print('y is not 5, 10 and 20.')
+
+\subsection{Constructors}
+The default constructor is a non-arg function, which will only initialize the already-exist fields. You can overload the constructor by writing a function which is named as "\_\_INIT\_\_".
+
+\begin{lstlisting}
+class MyClass {
+	def __INIT__([arguments]) {
+		# initialzze the class
+	}
 }
 \end{lstlisting}
 
-\section{Loop Statement}
-	There are three loop statement in Cygni: for, while, foreach.
-	The followings are three examples using different statements to print 1 to 9 in the console.
+In the example "position", the constructor of class "position" initialize two fields "x" and "y".
+
+\subsection{Implementation Inheritance}
+If you want to declare that a class derives from another class, use the following syntax:
+
 \begin{lstlisting}
-for i = 0, 10 {
-	print(i)
+class myDerivedClass: myBaseClass {
+	# functions and data members here
 }
+\end{lstlisting} 
 
+The Cygni class does not support multiple inheritance. Namely, a class can only inherit from one class.
 
-i = 0
-while i < 10 {
-	print(i)
-	i = i + 1
-}
+\subsection{Hiding Function Members}
+If a function with the same name is declared in both base and derived classs, the function in the derived class will hide the one in the base class.
 
-foreach i in range(0,10) {
-	print(i)
-}
-\end{lstlisting}
+% \begin{lstlisting}
+% \end{lstlisting}
 
-\subsection{for}
-	The 'for' statement should take two or three arguments, and it needs a named value as the iterator.
-\begin{lstlisting}
-for i in start, end {
-	# Do something
-}
-
-for i in start, end, step {
-	# Do something
-}
-\end{lstlisting}
-	If the step is positive, the iterator will increase the step at one time, and break out when the iterator is greater than or equal to the end. If the step is negative, the loop will break when the iterator is less than or equal to the end.
-\subsection{while}
-The 'while' loop will not break until the condition is false;
-\begin{lstlisting}
-while condition {
-	# Do something
-}
-\end{lstlisting}
-
-\subsection{foreach}
-'foreach' statement tranverse every element in the collection.
-\begin{lstlisting}
-foreach i in [1,2,3,4,5] {
-	# Do something
-}
-\end{lstlisting}
-
-\section{Jump statement}
-There are three jump statement in Cygni: break, continue, and return. 'break' can jump out from the current loop, 'continue' can start a new round in the loop. 'return' is used to return value from a function.
-
-\section{def}
-'def' statement is used to define a function.
-
-\section{class}
-'class' statement is used to define a class.
-
-\section{Recursion}
-
+\subsection{Calling Base Versions of Functions}
+If you want to call functions in the base class, you can use "base" 
