--- a/Cygni.Doc/Cygni.LaTeX/main.tex
+++ b/Cygni.Doc/Cygni.LaTeX/main.tex
@@ -19,6 +19,9 @@
 \include{./TeX_files/chapter04}
 \include{./TeX_files/chapter05}
 \include{./TeX_files/chapter06}
+\include{./TeX_files/chapter07}
+\include{./TeX_files/chapter08}
+\include{./TeX_files/chapter09}
 
 \backmatter
 % bibliography, glossary and index would go here.
