--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter08.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter08.tex
@@ -9,7 +9,7 @@ See table \ref{operators}.
 		\hline
 		Category & Operator \\ 
 		\hline
-		Arithmetic & +, -, *, /, \%, \^ \\
+		Arithmetic & +, -, *, /, \% \\
 		\hline
 		Logical & and, or, not \\
 		\hline
