--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter08.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter08.tex
@@ -59,23 +59,23 @@ a and b
 \section{Relation Operators}
 The following relation operators will return a boolean value:
 \begin{itemize}
-	\item '>'
-	\item '<'
-	\item '>='
-	\item '<='
-	\item '=='
-	\item '!='
+	\item $>$
+	\item $<$
+	\item $>=$
+	\item $<=$
+	\item $==$
+	\item $!=$
 \end{itemize}
 \section{Operator Overloading}
 There are serveral functions that used to overload the operators of the classes.
 \begin{itemize}
-	\item \_\_ADD\_\_
-	\item \_\_SUB\_\_
-	\item \_\_MUL\_\_
-	\item \_\_DIV\_\_
-	\item \_\_MOD\_\_
-	\item \_\_POW\_\_
-	\item \_\_UNARYPLUS\_\_
-	\item \_\_UNARYMINUS\_\_
-	\item \_\_CMP\_\_
+	\item \_\_ADD
+	\item \_\_SUB
+	\item \_\_MUL
+	\item \_\_DIV
+	\item \_\_MOD
+	\item \_\_POW
+	\item \_\_UNARYPLUS
+	\item \_\_UNARYMINUS
+	\item \_\_CMP
 \end{itemize}
