--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter05.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter05.tex
@@ -1,16 +1,10 @@
 \chapter{Classes}
 The data and functions within a class are known as the class's members.
-The following example displays
-\section{Data Members}
-Data members are those members that contain data for the class.
-\begin{lstlisting}
-\end{lstlisting}
+The following example displays the usage of the cygni class.
 
-\section{Function Members}
-Functions members are functions defined within the class. The 'function members' includes not only functions, but also constructors, operators, indexers, etc. An example is as followings:
 \begin{lstlisting}
 class position{
-	def __INIT__(nx, ny){
+	def __INIT(nx, ny){
 		this.x = nx
 		this.y = ny
 	}
@@ -20,7 +14,7 @@ class position{
 		this.y = ny
 	}
 
-	def __TOSTRING__(){
+	def __TOSTRING(){
 		printf("({0}, {1})", this.x, this.y)
 	}
 
@@ -29,15 +23,21 @@ p1 = position(10,20)
 print(p1)
 p1.move(35, 47)
 print(p1)
-\end{lstlisting}	
+\end{lstlisting}
 
+\section{Data Members}
+Data members are those members that contain data for the class.
+
+
+\section{Function Members}
+Functions members are functions defined within the class. The "function members" includes not only functions, but also constructors, operators, indexers, etc. An example is as followings:
 
 \subsection{Constructors}
-The default constructor is a non-arg function, which will only initialize the already-exist fields. You can overload the constructor by writing a function which is named as "\_\_INIT\_\_".
+The default constructor is a non-arg function, which will only initialize the already-exist fields. You can overload the constructor by writing a function which is named as "\_\_INIT".
 
 \begin{lstlisting}
 class MyClass {
-	def __INIT__([arguments]) {
+	def __INIT([arguments]) {
 		# initialzze the class
 	}
 }
@@ -58,7 +58,7 @@ The Cygni class does not support multiple inheritance. Namely, a class can only 
 
 \begin{lstlisting}
 class person {
-	def __INIT__(name, age) {
+	def __INIT(name, age) {
 		this.name = name
 		this.age = age
 	}
@@ -69,8 +69,9 @@ class person {
 }
 
 class employee : person {
-	def __INIT__(name, age, salary) {
-		base.__INIT__(name, age)
+	def __INIT(name, age, salary) {
+		this.name = name
+		this.age = age
 		this.salary = salary
 	}
 
@@ -84,22 +85,20 @@ class employee : person {
 \subsection{Hiding Function Members}
 If a function with the same name is declared in both base and derived classs, the function in the derived class will hide the one in the base class.
 
-% \begin{lstlisting}
-% \end{lstlisting}
 There are some built-in functions that can be overwrited.
 \begin{itemize}
-	\item \_\_INIT\_\_: Constructor for the class. The default constructor is a non-arg constructor.
-	\item \_\_TOSTRING\_\_: Output the class instance as a string.
-	\item \_\_ADD\_\_: override '+' operator.
-	\item \_\_SUB\_\_: override '-' operator.
-	\item \_\_MUL\_\_: override '*' operator.
-	\item \_\_DIV\_\_: override '/' operator.
-	\item \_\_MOD\_\_: override '\%' operator.
-	\item \_\_POW\_\_: override '\^' operator.
-	\item \_\_CMP\_\_: return a integer to indicate the comparision result. This function will override the '>', '<', '>=', '<=' operators.
+	\item \_\_INIT: Constructor for the class. The default constructor is a non-arg constructor.
+	\item \_\_TOSTRING: Output the class instance as a string.
+	\item \_\_ADD: override '+' operator.
+	\item \_\_SUB: override '-' operator.
+	\item \_\_MUL: override '*' operator.
+	\item \_\_DIV: override '/' operator.
+	\item \_\_MOD: override '\%' operator.
+	\item \_\_POW: override '\^' operator.
+	\item \_\_CMP: return a integer to indicate the comparision result. This function will override the $'>', '<', '>=', '<='$ operators.
 	% \item \_\_INDEXER\_\_: This function takes a list as indexes, and return an element.
 \end{itemize}
 
 
-\subsection{Calling Base Versions of Functions}
-The variable "base" is its parent class, you can call functions in the base class by it. 
+% \subsection{Calling Base Versions of Functions}
+% The variable "base" is its parent class, you can call functions in the base class by it. 
