--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter06.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter06.tex
@@ -15,3 +15,5 @@ TO DO:
 The "scope" command takes one argument. The value of the argument can be either 'display' or 'clear'. If the argument is 'display', this command will print every variable in the global scope. Otherwise, this command will clear everything in the global scope.
 \section{delete}
 The "delete" command is used to remove variable in the global scope. The arguments are the name of the variables.
+\section{setglobal}
+The "setglobal" command is used to modify variable in the global scope. The first argument is the name of the variables, and the second one is the new value assigned to the variable.
