--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter08.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter08.tex
@@ -69,13 +69,14 @@ The following relation operators will return a boolean value:
 \section{Operator Overloading}
 There are serveral functions that used to overload the operators of the classes.
 \begin{itemize}
-	\item \_\_ADD
-	\item \_\_SUB
-	\item \_\_MUL
-	\item \_\_DIV
-	\item \_\_MOD
-	\item \_\_POW
-	\item \_\_UNARYPLUS
-	\item \_\_UNARYMINUS
-	\item \_\_CMP
+	\item \_\_add
+	\item \_\_sub
+	\item \_\_mul
+	\item \_\_div
+	\item \_\_mod
+	\item \_\_pow
+	\item \_\_unaryPlus
+	\item \_\_unaryMinus
+	\item \_\_cmp
+	\item \_\_equals
 \end{itemize}
