--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter09.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter09.tex
@@ -1,1 +1,4 @@
 \chapter{Strings}
+Strings is a very important type in programming. Cygni supported ample usages of strings.
+\section{String Functions}
+
