--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter04.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter04.tex
@@ -25,4 +25,4 @@ def complex(real, imaginary) {
 a = complex(10, 20)
 \end{lstlisting}
 
-Here are some suggestions. Generally, structures perform better if the number of fields is fairly small, and they have difficult in containing complicated logical. They are suitable for simple data organization. If the logical of the data is more complicated, there exist some better choices, such as classes. 
+Here are some suggestions. Generally, structures perform better if the number of fields is relatively small, and they have difficult in containing complicated logical. They are suitable for simple data organization. If the logical of the data is more complicated, there exist some better choices, such as classes. 
