--- a/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter09.tex
+++ b/Cygni.Doc/Cygni.LaTeX/TeX_files/chapter09.tex
@@ -1,4 +1,37 @@
 \chapter{Strings}
 Strings is a very important type in programming. Cygni supported ample usages of strings.
 \section{String Functions}
-
+% [ "length", "replace", "format", "join", "split", "find", "lower", "upper", "trim", "trimStart", "trimEnd", "subString" ]
+See Table \ref{str_funcs}.
+\begin{table}
+	\centering
+	\resizebox{\textwidth}{!}{
+	\begin{tabular}{|c|c|}
+		\hline
+		Function & Description \\
+		% \hline 
+		% length & A field indicating the length of the string \\
+		\hline
+		replace & Replaces occurrences of a given substring in the string with another substring \\
+		\hline
+		format & Formats a string containing various values and specifiers for how each value should be formatted. \\
+		\hline
+		join & Builds a new string by combining a list of strings. \\
+		\hline
+		split & Splits the string into a list of substrings; the breaks occur wherever a given character occurs. \\
+		\hline
+		find & Locates the first occurrence of a given substring in the string. \\
+		\hline
+		lower & Converts the string to lowercase. \\
+		\hline 
+		upper & Converts the string to uppercase. \\
+		\hline
+		trim & Removes leading and trailing whitespace. \\
+		\hline
+		subString & Retrieves the substring starting at a specified position in a string. \\
+		\hline
+	\end{tabular}
+}
+	\label{str_funcs}
+	\caption{String Functions}
+\end{table}
