--- a/Cygni.Doc/Cygni-short-ref/template_Article.tex
+++ b/Cygni.Doc/Cygni-short-ref/template_Article.tex
@@ -263,9 +263,64 @@ class DerivedClass: MyClass {
 \subsection{Conversion}
 \begin{itemize}
 	\item int
+
+		arguments: a
+
+		description: convert certain value into integer.
+
+		return: integer
 	\item number
+
+		arguments: a
+
+		description: convert certain value into number.
+
+		return: number
 	\item str
+
+		arguments: a
+
+		description: convert certain value into string.
+
+		return: string
 	\item list
+
+		arguments: a
+
+		description: convert a Iterable object into list.
+
+		return: list
 \end{itemize}
+
+
+\section{The Math Library}
+To simplify, all the arguments for the functions in math library only takes number as parameters. If the argument is an integer, it will be converted into number.
+
+\begin{itemize}
+	\item math.sqrt(x)
+	\item math.abs(x)
+	\item math.log(x [,base])
+	\item math.log10(x)
+	\item math.max(args)
+	\item math.min(args)
+	\item math.exp(x)
+	\item math.sign(x)
+	\item math.sin(x)
+	\item math.cos(x)
+	\item math.tan(x)
+	\item math.asin(x)
+	\item math.acos(x)
+	\item math.atan(x)
+	\item math.sinh(x)
+	\item math.cosh(x)
+	\item math.tanh(x)
+	\item math.ceiling(x)
+	\item math.floor(x)
+	\item math.round(x)
+	\item math.truncate(x)
+\end{itemize}
+
+
+
 
 \end{document}
